--- a/src/Components/ChatWindow/ChatOutput/ChatOutput.module.css
+++ b/src/Components/ChatWindow/ChatOutput/ChatOutput.module.css
@@ -14,7 +14,7 @@
 }
 
 .mainWrapper::-webkit-scrollbar-thumb  {
-  background: rgba(175, 248, 3, 0.911);
+  background: antiquewhite;
   border-radius: 3px;
 }
 
