--- a/src/Components/ChatWindow/ContactAvatar/ContactAvatar.module.css
+++ b/src/Components/ChatWindow/ContactAvatar/ContactAvatar.module.css
@@ -4,7 +4,7 @@
   align-content: center;
   width: 100%;
   height: 100px;
-  border-bottom: 1px solid aqua;
+  border-bottom: 1px solid antiquewhite;
   backdrop-filter: blur(3px);
 }
 
