--- a/src/Components/ChatWindow/ContactAvatar/ContactAvatar.module.css
+++ b/src/Components/ChatWindow/ContactAvatar/ContactAvatar.module.css
@@ -11,7 +11,7 @@
 .selectContactInfo {
   display: flex;
   height: 100%;
-  width: 30%;
+  width: 40%;
   min-width: 250px;
   justify-content: flex-start;
   align-items: center;
@@ -19,6 +19,8 @@
 
 .selectedUserName {
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .avatar {
@@ -33,14 +35,20 @@
 
 .name {
   color: aliceblue;
-  font-size: 16px;
-  margin-left: 10%;
+  font-size: 25px;
+  margin: 0% 0% 0% 10%;
 }
 
-.name span {
+.typingStatus {
+  color: aliceblue;
+  font-size: 20px;
+  margin: 0% 0% 0% 5%;
+}
+
+.typingStatus span {
   color: aliceblue;
   display: inline;
-  font-size: 1vw;
+  font-size: 20px;
   clip-path: inset(0 3ch 0 0);
   animation: spin 1s steps(4) infinite;
 }
