--- a/src/Components/ContactsList/ContactsList.module.css
+++ b/src/Components/ContactsList/ContactsList.module.css
@@ -71,7 +71,12 @@
   font-size: 30px;
   margin-left: 20px;
   color: #edf9e6;
-  
+}
+
+.logOutButton {
+  background-color: #edf9e6;
+  margin-left: auto;
+  margin-right: 20px;
 }
 
 .hidingMenuHide {
