--- a/src/Components/ContactsList/ContactsList.module.css
+++ b/src/Components/ContactsList/ContactsList.module.css
@@ -79,6 +79,13 @@
   margin-right: 20px;
 }
 
+@media (max-width: 700px) {
+  .logOutButton {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .hidingMenuHide {
   width: 30px;
   height: 30px;
