--- a/src/Components/ContactsList/ContactsList.module.css
+++ b/src/Components/ContactsList/ContactsList.module.css
@@ -112,3 +112,24 @@
   background: antiquewhite;
   border-radius: 3px;
 }
+
+@media (max-width: 480px) {
+  .contactItemAvatar {
+    width: 50px;
+    height: 50px;
+  }
+
+  .contactItemName {
+    font-size: 15px;
+  }
+
+  .logOutButton {
+    margin-left: 10px;
+    margin-right: 0;
+  }
+
+  .hidingMenuHide {
+    width: 15px;
+    height: 15px;
+  }
+}
