--- a/src/Components/Authentication/Authentication.module.css
+++ b/src/Components/Authentication/Authentication.module.css
@@ -90,6 +90,7 @@
 @media (max-width: 480px) {
   .label {
     font-size: 7vw;
+    line-height: 6vw;
   }
   .formField {
     margin: 10vw 0vw 6vw 0vw;
